[package]
name = "orbitport-helios-challenge"
version = "0.1.0"
edition = "2021"
publish = false

# The gateway binary (`cargo run`) and the Helios mock (`cargo run --bin mock`)
# share this single crate. You only need to edit `src/plugins/helios.rs`.
[[bin]]
name = "gateway"
path = "src/main.rs"

[[bin]]
name = "mock"
path = "src/bin/mock.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
